# SimpIOTC

./: .gitignore  .gitignore.txt  ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benches/: compression.rs
demo/: Cargo.toml  README.md
demo/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode_tokens.rs  fuzz_decompress.rs  fuzz_roundtrip.rs
include/: iotc.h
src/: ffi.rs  lib.rs  main.rs  python.rs  schema.rs  seekable.rs  workspace.rs
src/entropy/: fse.rs  mod.rs
src/harness/: mod.rs  verify.rs
src/match_finder/: hash_chain.rs  mod.rs  simd_x86.rs
src/parallel/: mod.rs
src/parser/: greedy.rs  lazy.rs  mod.rs  optimal.rs
src/preprocessor/: bitshuffle.rs  byte_delta.rs  delta.rs  entropy_probe.rs  gorilla_xor.rs  mod.rs  polar_quant.rs  stride.rs
tests/: polar_quant_prototype.rs
