[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "iotc"
version = "0.1.0"
description = "High-speed LZ77/ANS compressor for IoT time-series data"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.maturin]
features = ["python"]
module-name = "iotc"
bindings = "pyo3"
