[package]
name = "iotc-demo"
version = "0.1.0"
edition = "2021"
description = "One-click demo for the iotc IoT compressor"
license = "MIT"

[[bin]]
name = "iotc-demo"
path = "src/main.rs"

[dependencies]
iot-compressor = { path = "..", default-features = false }
rfd = "0.15"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
