[package]
name = "iot-compressor-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.iot-compressor]
path = ".."

# ── Fuzz Targets ────────────────────────────────────────────────
# Run with: cargo +nightly fuzz run <target> -- -max_len=65536

[[bin]]
name = "fuzz_decompress"
path = "fuzz_targets/fuzz_decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode_tokens"
path = "fuzz_targets/fuzz_decode_tokens.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false
